# Xenophilic

./: .gitignore  CMakeLists.txt  LICENSE
include/core/: engine.hpp  resource_manager.hpp  status_handler.hpp  text_manager.hpp
include/core/handles/: entity.hpp  shader.hpp  texture.hpp
include/special/: video_encoder.hpp
res/shaders/: fragment.glsl  texture_fragment.glsl  texture_vertex.glsl  vertex.glsl
src/: main.cpp
src/core/: engine.cpp  resource_manager.cpp  status_handler.cpp  text_manager.cpp
src/core/handles/: entity.cpp  shader.cpp  texture.cpp
src/special/: video_encoder.cpp
